fix spacings

--- a/src/styles/common/heading.scss
+++ b/src/styles/common/heading.scss
@@ -18,7 +18,7 @@
   }
 
   &_h4 {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     font-weight: 500;
     line-height: 1.5;
   }
