--- a/src/styles/common/hero.scss
+++ b/src/styles/common/hero.scss
@@ -98,7 +98,7 @@
 
     &__text {
       position: static;
-      margin-bottom: 20px;
+      margin-bottom: 24px;
       width: 360px;
 
       .subheading {
